--- a/Festival-App/Festival-App/Platform/Storyboards/Base.lproj/Main.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TF7-Yd-CmO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lew-ya-ZdD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,17 +27,17 @@
                     <navigationItem key="navigationItem" id="3Xl-fV-G6T"/>
                     <connections>
                         <segue destination="CmV-eH-Uik" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="tat-d2-rEe"/>
-                        <segue destination="WnR-pl-plV" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="SfX-aN-LVd"/>
+                        <segue destination="K3f-Rx-D9K" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="SfX-aN-LVd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-442" y="-371"/>
+            <point key="canvasLocation" x="496.80000000000001" y="-371.06446776611699"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="MKA-CU-L22">
             <objects>
-                <viewController storyboardIdentifier="LoginVC" id="TF7-Yd-CmO" customClass="LoginViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TF7-Yd-CmO" customClass="LoginViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="w6F-71-ZU4"/>
                         <viewControllerLayoutGuide type="bottom" id="rwg-rT-dtG"/>
@@ -178,6 +178,7 @@
                             <constraint firstItem="UZQ-da-fZu" firstAttribute="leading" secondItem="3BS-Ri-J5Y" secondAttribute="leading" id="wA3-9I-WiM"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="u7a-vM-0Wp"/>
                     <connections>
                         <outlet property="emailTextField" destination="eVs-Tu-CKa" id="qUx-a8-smN"/>
                         <outlet property="passwordTextField" destination="tKr-rJ-5HB" id="R70-dz-pFo"/>
@@ -187,7 +188,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V6T-8R-8Od" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1514" y="-396"/>
+            <point key="canvasLocation" x="-575.20000000000005" y="-396.25187406296857"/>
         </scene>
         <!--RegisterVC-->
         <scene sceneID="DgA-R0-elx">
@@ -263,7 +264,7 @@
                                                 </constraints>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="40J-G2-fAI">
                                                 <rect key="frame" x="0.0" y="45" width="192" height="30"/>
@@ -272,7 +273,7 @@
                                                 </constraints>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="15"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HDD-ex-uPe">
                                                 <rect key="frame" x="0.0" y="90" width="192" height="30"/>
@@ -314,17 +315,11 @@
                                             <constraint firstAttribute="height" constant="160" id="KeR-lu-PjI"/>
                                         </constraints>
                                     </imageView>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="KI6-lp-Zdg">
-                                        <rect key="frame" x="169" y="206.5" width="37" height="37"/>
-                                        <color key="color" red="0.17719802470000001" green="0.16574353150000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </activityIndicatorView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="KI6-lp-Zdg" firstAttribute="centerY" secondItem="caU-dm-u1f" secondAttribute="centerY" constant="-70" id="4HU-FP-A0G"/>
                                     <constraint firstItem="rjb-bF-JMM" firstAttribute="centerX" secondItem="caU-dm-u1f" secondAttribute="centerX" id="76w-q0-aH6"/>
                                     <constraint firstItem="a7H-Pc-lQm" firstAttribute="top" secondItem="caU-dm-u1f" secondAttribute="top" constant="210" id="Hja-jW-M7i"/>
                                     <constraint firstItem="YU3-ir-0bv" firstAttribute="centerX" secondItem="caU-dm-u1f" secondAttribute="centerX" id="Lbt-iU-8Eq"/>
-                                    <constraint firstItem="KI6-lp-Zdg" firstAttribute="centerX" secondItem="caU-dm-u1f" secondAttribute="centerX" id="RUe-Mh-e0P"/>
                                     <constraint firstItem="YU3-ir-0bv" firstAttribute="top" secondItem="caU-dm-u1f" secondAttribute="top" constant="26" id="ePy-Hb-PeP"/>
                                     <constraint firstItem="rjb-bF-JMM" firstAttribute="top" secondItem="a7H-Pc-lQm" secondAttribute="bottom" constant="30" id="gP2-7b-yIk"/>
                                     <constraint firstItem="a7H-Pc-lQm" firstAttribute="centerX" secondItem="caU-dm-u1f" secondAttribute="centerX" id="kQe-sw-P9r"/>
@@ -365,7 +360,6 @@
                     <connections>
                         <outlet property="emailTextField" destination="40J-G2-fAI" id="sgV-6t-pJT"/>
                         <outlet property="passwordTextField" destination="HDD-ex-uPe" id="189-ec-ycp"/>
-                        <outlet property="spinner" destination="KI6-lp-Zdg" id="z9g-ma-to2"/>
                         <outlet property="usernameTextField" destination="DYt-cb-T4X" id="PI4-k9-4sh"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="toHomeFromRegister" id="Bb2-sH-5zi"/>
                     </connections>
@@ -518,6 +512,7 @@
                             <constraint firstItem="XHN-7S-UH2" firstAttribute="top" secondItem="LZW-nm-ysU" secondAttribute="top" id="r0P-W9-zkO"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="OlU-5c-UiN"/>
                     <connections>
                         <outlet property="menuBtn" destination="ce3-Xu-AAm" id="ZYI-x4-x8r"/>
                         <segue destination="LKJ-jc-yKd" kind="show" identifier="toChat" id="fna-TN-lHA"/>
@@ -525,7 +520,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NTD-L5-erm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1039" y="-638"/>
+            <point key="canvasLocation" x="2916" y="-638.2308845577212"/>
         </scene>
         <!--User MenuVC-->
         <scene sceneID="PR4-9P-hHd">
@@ -573,7 +568,7 @@
                                                 <connections>
                                                     <outlet property="optionImageView" destination="qLI-aj-yFQ" id="0aQ-nQ-ULc"/>
                                                     <outlet property="optionLbl" destination="Y81-mI-VHa" id="enF-6o-UEd"/>
-                                                    <segue destination="WnR-pl-plV" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="COe-lv-7BE"/>
+                                                    <segue destination="K3f-Rx-D9K" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="COe-lv-7BE"/>
                                                 </connections>
                                             </tableViewCell>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="News" id="dWt-61-igp" customClass="UserMenuCell" customModule="Festival_App" customModuleProvider="target">
@@ -805,7 +800,7 @@
                         <outlet property="profileImgView" destination="v3h-6H-3Ww" id="Bs6-Ds-qDV"/>
                         <outlet property="tableView" destination="ajL-R2-Y5z" id="s0T-Tb-2wG"/>
                         <outlet property="userBtn" destination="kPV-J1-jag" id="XL4-9V-vKu"/>
-                        <segue destination="TF7-Yd-CmO" kind="custom" identifier="logoutSegue" customClass="SWRevealViewControllerSeguePushController" id="MAS-s7-NtX"/>
+                        <segue destination="lew-ya-ZdD" kind="custom" identifier="logoutSegue" customClass="SWRevealViewControllerSeguePushController" id="MAS-s7-NtX"/>
                         <segue destination="E6Z-zw-pMN" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="XBJ-sN-Zfs"/>
                     </connections>
                 </viewController>
@@ -829,13 +824,13 @@
             </objects>
             <point key="canvasLocation" x="-774" y="-1425"/>
         </scene>
-        <!--UIViewController-qZT-9J-b10-->
+        <!--merch-->
         <scene sceneID="BpQ-Hp-572">
             <objects>
-                <viewControllerPlaceholder storyboardName="Merch" referencedIdentifier="UIViewController-qZT-9J-b10" id="Mx6-gS-x1m" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Merch" referencedIdentifier="merch" id="Mx6-gS-x1m" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="brm-nY-P3N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-662" y="-1468"/>
+            <point key="canvasLocation" x="-777" y="-1468"/>
         </scene>
         <!--MerchVC-->
         <scene sceneID="ySD-Ra-5LA">
@@ -867,7 +862,7 @@
                 <viewControllerPlaceholder storyboardIdentifier="SWRevealChat" storyboardName="Chat" referencedIdentifier="SWRevealChat" id="LKJ-jc-yKd" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USa-pL-jRX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1038" y="-163"/>
+            <point key="canvasLocation" x="1976.8" y="-163.71814092953525"/>
         </scene>
         <!--ProfileVC-->
         <scene sceneID="o0Z-Hh-oEB">
@@ -876,6 +871,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7g-FT-eaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-761" y="-1294"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HMg-Pj-GHb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="K3f-Rx-D9K" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XXe-Z1-X0Y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WnR-pl-plV" kind="relationship" relationship="rootViewController" id="JQy-Wu-8MX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RY0-qa-xq1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1976.8" y="-638.2308845577212"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rPe-30-d6B">
+            <objects>
+                <navigationController storyboardIdentifier="LoginVC" automaticallyAdjustsScrollViewInsets="NO" id="lew-ya-ZdD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u6p-YE-Kkc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TF7-Yd-CmO" kind="relationship" relationship="rootViewController" id="PpB-HK-bNq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8l0-p6-jPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1514.4000000000001" y="-396.25187406296857"/>
         </scene>
     </scenes>
     <resources>
@@ -888,6 +919,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="SfX-aN-LVd"/>
-        <segue reference="hgO-G5-ZHv"/>
+        <segue reference="Bb2-sH-5zi"/>
     </inferredMetricsTieBreakers>
 </document>
