--- a/Festival-App/Festival-App/Platform/Storyboards/MyAccount.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/MyAccount.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -8,13 +12,13 @@
         <!--ProfileVC-->
         <scene sceneID="nB1-IW-SUE">
             <objects>
-                <viewController storyboardIdentifier="ProfileVC" id="s9V-d6-1hR" customClass="ProfileVC" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="s9V-d6-1hR" customClass="ProfileVC" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2t7-ff-QF4"/>
                         <viewControllerLayoutGuide type="bottom" id="BZE-Ix-fpH"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Pj2-bo-P63">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wx9-rq-tNU" customClass="GradientView" customModule="Festival_App" customModuleProvider="target">
@@ -166,6 +170,7 @@
                             <constraint firstItem="wx9-rq-tNU" firstAttribute="leading" secondItem="Pj2-bo-P63" secondAttribute="leading" id="aaG-Qi-G5B"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="JDN-61-h5D"/>
                     <connections>
                         <outlet property="menuBtn" destination="U1N-mf-gna" id="lvf-JG-XN1"/>
                         <outlet property="profileImgView" destination="G76-Ep-6jI" id="MT0-sW-OKz"/>
@@ -173,6 +178,24 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Exx-cZ-p4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2664.8000000000002" y="80.50974512743629"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Jkl-JE-WZt">
+            <objects>
+                <navigationController storyboardIdentifier="ProfileVC" automaticallyAdjustsScrollViewInsets="NO" id="DA4-0S-ipW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Oib-6p-g1W">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="s9V-d6-1hR" kind="relationship" relationship="rootViewController" id="lN7-VC-FdM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uXw-5u-DOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1725.5999999999999" y="80.50974512743629"/>
         </scene>
