--- a/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/News.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="aqS-96-o9y">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,7 +19,7 @@
                         <viewControllerLayoutGuide type="bottom" id="r4d-8I-xaY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lsH-pS-CUM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SlJ-uU-q1e" customClass="GradientView" customModule="Festival_App" customModuleProvider="target">
@@ -87,33 +91,33 @@
                                                             </constraints>
                                                         </webView>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ultra Music 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="hva-Wk-zcC">
-                                                            <rect key="frame" x="170.5" y="20" width="414.5" height="26"/>
+                                                            <rect key="frame" x="170.5" y="20" width="189.5" height="26"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ultra Music 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Emc-iA-KAp">
-                                                            <rect key="frame" x="10" y="5" width="580" height="26"/>
+                                                            <rect key="frame" x="10" y="5" width="355" height="26"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuK-hb-kzw">
-                                                            <rect key="frame" x="10" y="98" width="580" height="71"/>
+                                                            <rect key="frame" x="10" y="98" width="355" height="71"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                             <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXk-Z9-xVZ">
-                                                            <rect key="frame" x="10" y="60" width="580" height="110"/>
+                                                            <rect key="frame" x="10" y="60" width="355" height="110"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                             <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.04.2018" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Lz-FL-hHf">
-                                                            <rect key="frame" x="171.5" y="54" width="413.5" height="14"/>
+                                                            <rect key="frame" x="171.5" y="54" width="188.5" height="14"/>
                                                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="10"/>
                                                             <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -195,26 +199,20 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="fc6-fI-6s3">
-                                <rect key="frame" x="169" y="315" width="37" height="37"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="fIb-m5-mK6" secondAttribute="trailing" id="FuZ-di-2cU"/>
                             <constraint firstAttribute="trailing" secondItem="SlJ-uU-q1e" secondAttribute="trailing" id="JuV-Yo-Dqg"/>
-                            <constraint firstItem="fc6-fI-6s3" firstAttribute="centerY" secondItem="lsH-pS-CUM" secondAttribute="centerY" id="K28-AM-yhu"/>
                             <constraint firstItem="fIb-m5-mK6" firstAttribute="top" secondItem="SlJ-uU-q1e" secondAttribute="bottom" id="OSf-x2-xvQ"/>
                             <constraint firstItem="r4d-8I-xaY" firstAttribute="top" secondItem="fIb-m5-mK6" secondAttribute="bottom" id="Whg-nZ-2CJ"/>
                             <constraint firstItem="SlJ-uU-q1e" firstAttribute="leading" secondItem="lsH-pS-CUM" secondAttribute="leading" id="fmD-Kv-6OD"/>
                             <constraint firstItem="SlJ-uU-q1e" firstAttribute="top" secondItem="lsH-pS-CUM" secondAttribute="top" id="l87-qb-gcC"/>
-                            <constraint firstItem="fc6-fI-6s3" firstAttribute="centerX" secondItem="lsH-pS-CUM" secondAttribute="centerX" id="pc7-6z-lJ5"/>
                             <constraint firstItem="fIb-m5-mK6" firstAttribute="leading" secondItem="lsH-pS-CUM" secondAttribute="leading" id="rxC-6U-NP9"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="menuBtn" destination="ncc-Tb-958" id="oaW-hv-8tA"/>
-                        <outlet property="spinner" destination="fc6-fI-6s3" id="KFC-iW-SFD"/>
                         <outlet property="tableView" destination="Tae-EA-sqC" id="obf-C0-oJ5"/>
                     </connections>
                 </viewController>
